# BARRELMAN

./: .gitignore  README.md  barrelman_preview.html  pyproject.toml  pytest.ini  run_preview.py  setup.py  test_lexer.py
.cursor/rules/: barrelman-exporters.mdc  barrelman-project.mdc  barrelman-syntax.mdc  python-rules.mdc
assets/: heirarchy.html  hierarchy-hub.html
assets/lang/: barrelman.sublime-syntax  barrelman_syntax_schema.json
assets/mermaid/: spacing_deep_dive.mmd
assets/vsix/: barrelman-extension.vsix.instructions.md  barrelman-extension.vsix.instructions.txt  barrelman-theme-dark.json  barrelman.tmLanguage.json  package.json
assets/vsix/theme/: barrelman-theme-light.json
docs/: BARRELEXAMPLE.bman  SYNTAX.md  SYSTEM-ARCHITECTURE.md  palette.md
docs/todo/: TODO_CLI.md  TODO_HTML_EXPORTER.md  TODO_LEXER.md  TODO_MARKDOWN_EXPORTER.md  TODO_PREVIEW_SERV.md
github_actions/: bman-lint.yml  bmanfmt.py  bmanlint.py
github_actions/tests/: bman_test_runner.py
github_actions/tests/testcases/: example_valid.bman  formatted.bman  unformatted.bman
src/: barrelman.bman  cli.py  lexer.py  preferences.json  preview_server.py  rich_directory_tree_src.md
src/exporters/: html_exporter.py  markdown_exporter.py
src/exporters/graphviz/: dot_exporter.py
src/exporters/test_early_html_exporter/: test_early__dark_mode_html.py  test_early_export_html.py
src/exporters/test_early_markdown_exporter/: test_early_export_markdown.py
src/github_actions/: bmanfmt.py  bmanlint.py
src/github_actions/tests/: bman_test_runner.py
src/github_actions/tests/testcases/: bad_preview.bman  good_preview.bman
src/github_actions/tests/testcases/error_examples/: bad_preview.bman  bad_preview_two.bman
src/static/: barrelman.css
src/test_early_cli/: test_early_run_cli.py
src/test_early_lexer/: test_early___init__.py  test_early_get_indent_level.py  test_early_highlight.py  test_early_infer_outcome.py  test_early_render_syntax_tree.py  test_early_tokenize.py  test_early_validate_spacing_.py
src/test_early_preview_server/: test_early_run_preview_server.py
tools/: rich_directory_tree_tools.md  tree.py
